[ACPI] migrate to seq_file() interface http://bugzilla.kernel.org/show_bug.cgi?id=3333

Signed-off-by: David Shaohua Li <shaohua.li@intel.com>
Signed-off-by: Len Brown <len.brown@intel.com>